--- a/index.html
+++ b/index.html
@@ -1,45 +1,124 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>my first html</title>
+	<title>My Home Work</title>
 	<meta charset="utf-8">
 	<style type="text/css">
-		div{
-			border: 1px solid red;
-			width: 200px;
+
+	body {width: 616px;
+		height: 566px;
+    padding: 0px;
+    border: 5px solid lightgray;
+    margin: 5px solid white; }
+	
+
+
+		#div1 {
+   		color: white;
+   		width: 596px;
+   		height: 50px;
+		background: #596673fa;
+		padding: 10px;
+		text-align: center;
+		
+
+
+
+		}
+		img { border-radius: 50px;
 			margin: 0 auto;
+			padding: 10px;
+			
 		}
-		#span1 {
-			color: blue;
-		}
-		}
-h4 {
-	color: blue;
-	</style>
+		
+		.div2 {	color: white;
+				float: left;
+				width: 140px;
+				height:476px;
+				padding: 10px;
+				background: linear-gradient(90deg, black, grey);
+
+
+ 		}
+	
+		 .div3 {color:darkblue;
+		 		width: 466px;
+		 		height: 476px;
+		 		padding: 25px;
+		 		position: relative;
+		 		left: 20px;
+		 		line-height: 0.5em;
+		 		margin-right: 140px;
+
+
+		 }
+		 
+		                                                                                                                                                                                                                                    
+  </style>
 </head>
+
 <body>
-	<h1>this is h1 text</h1>
-	<h4>and this is h4 text</h4>
-	<h1 style="color:red;">
-	<p>djjcnjk&#9773;sjdakolx<br>jcj<u><b>hsejdad</b></u>x<br>nkasx</p>
-	<div>this is div</div>
-	<div>
-		<p>this is div</p>
-		<h3>this is h2 inside of div</h3>
-		<img src="depositphotos_79646244-stock-photo-bouquet-from-cultivated-flowers-in.jpg">
+	<div id="div1">
+		<h2>Curriculum vitae</h2>
 	</div>
-	<pre>jdkjkfvlfknbjkxsskzl,xzm kkkkkkdkkaloaqjdjjd
-		<span id="span1">fjkdjkvghjfnvjvn</span>
-	</pre>
-	<table>
-		<tr>
-			<td>hjjkkjkjj</td>
-			<ul>
-				<li>jjjjkkklj</li>
+	<div class="div2">
+			<img src="I love Kiev.jpeg" width="124" height="124" alt="Kiev">
+			<div>
+				<h2 style="border-bottom: 3px solid yellow">Котофей Котофеич</h2></div>
+			<div style="text-align: center;"><u><b>Люблю:</b></u></div>
+			<p style="border: 2px solid orange; 
+			border-radius: 8px;
+			background-color: orange;
+			width: 120px;
+			height: 15px;
+			text-align: center;"><small>Сметану</small></p>
+			
+			<p style="border: 2px solid blue; 
+			border-radius: 8px;
+			 background-color: blue;width: 100px;
+			height: 15px;
+			text-align: center;"><small>Молоко</small>
+		</p>
+			<p style="border: 2px solid green;
+			 border-radius: 8px; 
+			 background-color: green;
+			 width: 140px;
+			height: 15px;
+			text-align: center"><small>Рыбу</small>
+		</p>
+			<p style="text-align: center;"><u><b>Контакты</b></u>
+		</p>
+			<div>
+				<ul>
+					<li><a href="vk.com">VK</a></li>
+						<li><a href="ok.com">Ok</a></li>
+						<li><a href="Facebook.com">Facebook</a></li>
+					</ul>
+				</div>
+			</div>
+	<div class="div3"><b>Дата рождения:<br></b>
+		<p>1 января 2000г</p>
+		<p><b>Место рождения:</b><br></p>
+		<p>Теплая печка</p>
+		
+	<div><b>Soft skills:</b></div>
+	<p>- Photoshop</p>
+	<p>- Word</p>
+	<p>- Paint</p>
+	
+	<div><b>Обо мне:</b></div>
+	<p>- Не пью</p>
+	<p>- Не курю</p>
+	
 
-		</ul>
-	</tr>
-</table>
-
+	</div>
 </body>
-</html>
+
+
+
+		
+
+
+	
+
+	
